--- a/portfolio/allen13.html
+++ b/portfolio/allen13.html
@@ -3,7 +3,7 @@ layout: client
 title: Wedding Dress for Liz
 image: allen13.jpg
 nextpic: allen14
-prevpic: alen12
+prevpic: allen12
 counter: 13 / 16
 ---
 
