--- a/portfolio/allen15.html
+++ b/portfolio/allen15.html
@@ -2,8 +2,8 @@
 layout: client
 title: Wedding Dress for Liz
 image: allen15.jpg
-nextpic: 16
-prevpic: 14
+nextpic: allen16
+prevpic: allen14
 counter: 15 / 16
 ---
 
