--- a/portfolio/candler1.html
+++ b/portfolio/candler1.html
@@ -7,10 +7,10 @@ nextpic: candler2
 counter: 1 / 16
 ---
 
-A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.
+<p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 <p>Photography by <a href="www.greggbrownweddings.com">Gregg Brown</a></p>
 
 <hr />
 
-Rebecca's dress has a fitted and boned bodice with a face framing collar and v-neckline. Long lace sleeves are finished with scalloped edging. The skirt is a tea length full circle over many layers of ivory netting, each edged with orange satin ribbon. The lace hangs in handkerchief points over the silk skirt and in a waterfall peplum at the back. The dress closes with a concealed zip at the back and is finished with a silk sash and covered buttons on the bodice and back of the halter neck.
+</p>Rebecca's dress has a fitted and boned bodice with a face framing collar and v-neckline. Long lace sleeves are finished with scalloped edging. The skirt is a tea length full circle over many layers of ivory netting, each edged with orange satin ribbon. The lace hangs in handkerchief points over the silk skirt and in a waterfall peplum at the back. The dress closes with a concealed zip at the back and is finished with a silk sash and covered buttons on the bodice and back of the halter neck.</p>
