--- a/portfolio/candler2.html
+++ b/portfolio/candler2.html
@@ -7,12 +7,12 @@ prevpic: candler1
 counter: 2 / 16
 ---
 
-A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.
+<p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 <p>Photography by <a href="www.greggbrownweddings.com">Gregg Brown</a></p>
 
 <hr />
 
-Rebecca said <i>"Felicity - dress maker extraordinaire.  I loved the dress, EVERYONE
+<p>Rebecca said <i>"Felicity - dress maker extraordinaire.  I loved the dress, EVERYONE
 loved the dress.  Comments range from "so beautiful", "stunning",
-"gorgeous", "wow".  THANK YOU</i>
+"gorgeous", "wow".  THANK YOU</i></p>
