--- a/portfolio/candler3.html
+++ b/portfolio/candler3.html
@@ -7,8 +7,8 @@ prevpic: candler2
 counter: 3 / 16
 ---
 
-A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.
+<p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 <hr />
 
-Original design sketch
+<p></p>Original design sketch</p>
