--- a/portfolio/candler4.html
+++ b/portfolio/candler4.html
@@ -7,8 +7,8 @@ prevpic: candler3
 counter: 4 / 16
 ---
 
-A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.
+<p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 <hr />
 
-A picture of the fabric samples used for Rebecca's dress.
+<p>A picture of the fabric samples used for Rebecca's dress.</p>
