--- a/portfolio/candler6.html
+++ b/portfolio/candler6.html
@@ -7,7 +7,7 @@ prevpic: candler5
 counter: 6 / 16
 ---
 
-A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.
+<p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 <p>Photography by <a href="www.greggbrownweddings.com">Gregg Brown</a></p>
 
