--- a/links.html
+++ b/links.html
@@ -57,6 +57,14 @@ location: links
     </div>
 </a>
 
+<h3>Wedding Directories</h3>
+
+<a class="linkpage" href="http://www.weddingdirectorylondon.co.uk" target="_blank">
+    <div class="linkpage">
+        London Wedding Directory
+        <br />
+    </div>
+</a>
 <h3>China Hire</h3>
 
 <a class="linkpage" href="http://www.vintagefloralteas.co.uk/"
