--- a/links.html
+++ b/links.html
@@ -65,6 +65,22 @@ location: links
         <br />
     </div>
 </a>
+
+<a class="linkpage" href="http://www.surreyweddings.co.uk" target="_blank">
+    <div class="linkpage">
+        Surrey Wedding Directory
+        <br />
+    </div>
+</a>
+
+<a class="linkpage" href="http://www.weddingdirectorysussex.co.uk" target="_blank">
+    <div class="linkpage">
+        Sussex Wedding Directory
+        <br />
+    </div>
+</a>
+
+
 <h3>China Hire</h3>
 
 <a class="linkpage" href="http://www.vintagefloralteas.co.uk/"
