--- a/portfolio/huggett1.html
+++ b/portfolio/huggett1.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Bridesmaids Dresses for Barbara
+title: Wedding dress for Barbara
 image: Huggett1.jpg
 nextpic: Huggett2
 
