--- a/portfolio/huggett2.html
+++ b/portfolio/huggett2.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Bridesmaids Dresses for Barbara
+title: Wedding dress for Barbara
 image: Huggett2.jpg
 nextpic: Huggett3
 prevpic: Huggett1
@@ -10,5 +10,7 @@ counter: 2 / 12
 <p>Edwardian inspired dress made from duchess satin and beaded Guipure lace. The dress is trimmed with gathered lace flounces and groups of pink flowers. Made in three pieces the lace over bodice has long sleeves and a high collar. The train attached with poppas and was trimmed with matching lace flounces. </p>
 
 <p>Photography by <a href="www.michellebeanphotography.co.uk">Michelle Bean</a></p>
+
+
 
 
