--- a/portfolio/huggett3.html
+++ b/portfolio/huggett3.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Bridesmaids Dresses for Barbara
+title: Wedding dress for Barbara
 image: Huggett3.jpg
 nextpic: Huggett4
 prevpic: Huggett2
@@ -14,3 +14,4 @@ counter: 3 / 12
 <hr />
 
 <p>The train came with a wrist loop so Barbara could carry it easily when walking outside. </p>
+
