--- a/portfolio/allen1.html
+++ b/portfolio/allen1.html
@@ -12,3 +12,6 @@ counter: 1 / 16
 <hr />
 
  
+<p>Liz Allen wrote:<i>
+
+My dress is stunning and I love it - you have done me proud - I can't wait until November to wear it, I want to wear it now!! lol. I think you can tell by the smiles on my face in the photos how pleased I am with it. Thank you just doesn't seem enough so for now I will say in French - Merci mille fois or a thousand thankyous!</i></p>
