--- a/thankyous.html
+++ b/thankyous.html
@@ -117,6 +117,19 @@ location: thanks
     </div>
 </div>
 
+
+<div class="section">
+    <img class="right" src="{{ site.baseimageref }}thanks/allen.jpg" alt="" />
+    <div class="sectiontext">
+        <h3>Wedding dress for Liz Allen</h3>
+        <p>
+           My dress is stunning and I love it - you have done me proud - I can't wait until November to wear it, I want 
+           to wear it now!! lol. I think you can tell by the smiles on my face in the photos how pleased I am with it. 
+           Thank you just doesn't seem enough so for now I will say in French - Merci mille fois or a thousand thankyous!
+        </p>
+        
+    </div>
+</div>
 <div class="section">
     <img class="right" src="{{ site.baseimageref }}thanks/singleton.jpg" alt="" />
     <div class="sectiontext">
