--- a/thankyous.html
+++ b/thankyous.html
@@ -130,6 +130,24 @@ location: thanks
         
     </div>
 </div>
+
+
+<div class="section">
+    <img class="left" src="{{ site.baseimageref }}thanks/white.jpg" alt="" />
+    <div class="sectiontext">
+        <h3>Wedding Bolero for Emma White</h3>
+        <p>
+           Hi Felicity,
+
+I just wanted to say thank you again for the whole experience of having a shrug made for me. It was exactly what I always
+wanted and went so well with my dress that everyone thought it was just another part to my dress!
+Everyone commented how lovely it was! You made my idea come true, so thank you very much!
+        </p>
+        
+    </div>
+</div>
+
+
 <div class="section">
     <img class="right" src="{{ site.baseimageref }}thanks/singleton.jpg" alt="" />
     <div class="sectiontext">
