--- a/ClientSet.html
+++ b/ClientSet.html
@@ -148,6 +148,9 @@
                 content += "---\n";
                 content += "\n";
 
+                content += "<b>" + title + "</b>\n";
+                content += "\n";
+
                 if (recurrent) {
                     content += recurrent;
                     content += "\n";
