--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ location: home
 
 <div style="text-align: center">
     <a href="http://www.the-wedding-industry-awards.co.uk/" target="_blank">
-        <img src="http://www.the-wedding-industry-awards.co.uk/downloads/twia_11.0.jpg"/>
+        <img src="http://www.the-wedding-industry-awards.co.uk/damian-uploads/regionalfinalist/weddingawards_badges_1.0_1.jpg"/>
     </a>
 </div>
 
