--- a/links.html
+++ b/links.html
@@ -148,6 +148,15 @@ location: links
     </div>
 </a>
 
+<h3> Music </h3>
+
+<a class="linkpage" href="http://www.heathercaddick.co.uk/hire-me" target="_blank">
+    <div class="linkpage">
+        Heather Caddick - Opera Singer
+        <br />
+    </div>
+</a>
+
 <h3> Flowers </h3>
 
 <a class="linkpage" href="http://www.fleurescent.co.uk/" target="_blank">
