Add casey and caseybmaid to portfolio.

--- a/portfolio/casey13.html
+++ b/portfolio/casey13.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey13.jpg
 
 prevpic: casey12
