--- a/portfolio/casey4.html
+++ b/portfolio/casey4.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey4.jpg
 nextpic: casey5
 prevpic: casey3
@@ -20,4 +20,6 @@ counter: 4 / 13
 <p>
     The bridesmaid dresses I made perfectly complimented the dress I'd made for the bride and
     suited the age and figure of both grown-up and teen.
+    <br/><br>
+    More pictures of the bridesmaids' dresses <a href="./caseybmaid1.html">here</a>.
 </p>
