--- a/portfolio/casey5.html
+++ b/portfolio/casey5.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey5.jpg
 nextpic: casey6
 prevpic: casey4
