--- a/portfolio/casey1.html
+++ b/portfolio/casey1.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey1.jpg
 nextpic: casey2
 
