--- a/portfolio/casey10.html
+++ b/portfolio/casey10.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey10.jpg
 nextpic: casey11
 prevpic: casey9
