--- a/portfolio/casey12.html
+++ b/portfolio/casey12.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey12.jpg
 nextpic: casey13
 prevpic: casey11
