--- a/portfolio/casey2.html
+++ b/portfolio/casey2.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey2.jpg
 nextpic: casey3
 prevpic: casey1
