--- a/portfolio/casey3.html
+++ b/portfolio/casey3.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey3.jpg
 nextpic: casey4
 prevpic: casey2
