--- a/portfolio/casey6.html
+++ b/portfolio/casey6.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey6.jpg
 nextpic: casey7
 prevpic: casey5
