--- a/portfolio/casey7.html
+++ b/portfolio/casey7.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey7.jpg
 nextpic: casey8
 prevpic: casey6
