--- a/portfolio/casey8.html
+++ b/portfolio/casey8.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey8.jpg
 nextpic: casey9
 prevpic: casey7
