--- a/portfolio/casey9.html
+++ b/portfolio/casey9.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: Wedding Dress and Bridesmaids for Katherine
+title: Wedding Dress for Katherine
 image: casey9.jpg
 nextpic: casey10
 prevpic: casey8
