Attempt to fix relative links again.

--- a/portfolio/casey4.html
+++ b/portfolio/casey4.html
@@ -21,5 +21,5 @@ counter: 4 / 13
     The bridesmaid dresses I made perfectly complimented the dress I'd made for the bride and
     suited the age and figure of both grown-up and teen.
     <br/><br>
-    More pictures of the bridesmaids' dresses <a href="caseybmaid1.html">here</a>.
+    More pictures of the bridesmaids' dresses <a href="portfolio/caseybmaid1.html">here</a>.
 </p>
