--- a/portfolio/caseybmaid1.html
+++ b/portfolio/caseybmaid1.html
@@ -20,5 +20,5 @@ counter: 1 / 7
     The bridesmaid dresses I made perfectly complimented the dress I'd made for the
     bride and suited the age and figure of both grown-up and teen.
     <br/><br>
-    More pictures of the brides dress <a href="casey1.html">here</a>.
+    More pictures of the brides dress <a href="portfolio/casey1.html">here</a>.
 </p>
