Renames to avoid confusion/error.

--- a/portfolio/martinez1.html
+++ b/portfolio/martinez1.html
@@ -2,7 +2,7 @@
 layout: client
 title: Wedding dress for Faye
 image: martinez1.jpg
-nextpic: martinez1a
+nextpic: martinez100
 
 counter: 1 / 25
 ---
