--- a/portfolio/martinez100.html
+++ b/portfolio/martinez100.html
@@ -1,7 +1,7 @@
 ---
 layout: client
 title: Wedding dress for Faye
-image: martinez1a.jpg
+image: martinez100.jpg
 nextpic: martinez2
 prevpic: martinez1
 counter: 2 / 25
