--- a/portfolio/martinez2.html
+++ b/portfolio/martinez2.html
@@ -3,7 +3,7 @@ layout: client
 title: Wedding dress for Faye
 image: martinez2.jpg
 nextpic: martinez3
-prevpic: martinez1a
+prevpic: martinez100
 counter: 3 / 25
 ---
 
