--- a/portfolio/miriam3.html
+++ b/portfolio/miriam3.html
@@ -2,7 +2,7 @@
 layout: client
 title: Vintage Wedding dress for Miriam
 image: miriam3.jpg
-nextpic: miriam3a
+nextpic: miriam30
 prevpic: miriam2
 counter: 3 / 20
 ---
