--- a/portfolio/miriam30.html
+++ b/portfolio/miriam30.html
@@ -1,7 +1,7 @@
 ---
 layout: client
 title: Vintage Wedding dress for Miriam
-image: miriam3a.jpg
+image: miriam30.jpg
 nextpic: miriam4
 prevpic: miriam3
 counter: 4 / 20
