--- a/portfolio/miriam4.html
+++ b/portfolio/miriam4.html
@@ -3,7 +3,7 @@ layout: client
 title: Vintage Wedding dress for Miriam
 image: miriam4.jpg
 nextpic: miriam5
-prevpic: miriam3a
+prevpic: miriam30
 counter: 5 / 20
 ---
 
