--- a/portfolio/rachel10.html
+++ b/portfolio/rachel10.html
@@ -3,7 +3,7 @@ layout: client
 title: Bridesmaids for Rachel Jones 
 image: rachel10.jpg
 nextpic: rachel11
-prevpic: rachel9a
+prevpic: rachel90
 counter: 11 / 18
 ---
 
