--- a/portfolio/rachel90.html
+++ b/portfolio/rachel90.html
@@ -1,7 +1,7 @@
 ---
 layout: client
 title: Bridesmaids for Rachel Jones 
-image: rachel9a.jpg
+image: rachel90.jpg
 nextpic: rachel10
 prevpic: rachel9
 counter: 10 / 18
