--- a/portfolio/rachel9.html
+++ b/portfolio/rachel9.html
@@ -2,7 +2,7 @@
 layout: client
 title: Bridesmaids for Rachel Jones 
 image: rachel9.jpg
-nextpic: rachel9a
+nextpic: rachel90
 prevpic: rachel8
 counter: 9 / 18
 ---
