--- a/portfolio/keely1.html
+++ b/portfolio/keely1.html
@@ -27,7 +27,7 @@ Wedding dress for Keely Williams
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.mariannechua.com/" target="_blank"> Simon Hooley </a> </i></p><hr /> 
+<p> <i> Official photographs by <a href="http://www.simonhooleyphotography.co.uk/" target="_blank"> Simon Hooley </a> </i></p><hr /> 
 
 <p>
 Keely's ethereal dress has a fitted and bond bodice with sweetheart neckline and tiny puffed tulle sleeves. The main dress is made from pale blue and gold shot taffeta, over layers and layers of tiff netting and a hoop to create the skirt shape. Layers of pale blue and ivory silk tulle are then draped and ruched over the bodice and skirt softening and blending the colours for this fairytale dress. A layer of sequin covered tulle is hidden beneath the top layers of the bodice and top part of the skirt so the sparkles subtly caught the light as Keely moved without being over powering.
