--- a/portfolio/keely12.html
+++ b/portfolio/keely12.html
@@ -27,7 +27,7 @@ Wedding dress for Keely Williams
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.mariannechua.com/" target="_blank"> Simon Hooley </a> </i></p><hr /> 
+<p> <i> Official photographs by <a href="http://www.simonhooleyphotography.co.uk/" target="_blank"> Simon Hooley </a> </i></p><hr /> 
 
 <p>
 Keely's amazing photographer took some very atmospheric photographs that perfectly captured the ethereal and fairytale feel of her dress.
