--- a/portfolio/keely13.html
+++ b/portfolio/keely13.html
@@ -27,7 +27,7 @@ Wedding dress for Keely Williams
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.mariannechua.com/" target="_blank"> Simon Hooley </a> </i></p><hr /> 
+<p> <i> Official photographs by <a href="http://www.simonhooleyphotography.co.uk/" target="_blank"> Simon Hooley </a> </i></p><hr /> 
 
 <p>
 Dressing the bride; lacing the inner bodice and then all those teeny-tiny buttons and loops!
