--- a/portfolio/keely6.html
+++ b/portfolio/keely6.html
@@ -27,4 +27,4 @@ Wedding dress for Keely Williams
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.mariannechua.com/" target="_blank"> Simon Hooley </a> </i></p>
+<p> <i> Official photographs by <a href="http://www.simonhooleyphotography.co.uk/" target="_blank"> Simon Hooley </a> </i></p>
