Fix photo links.

--- a/portfolio/candler10.html
+++ b/portfolio/candler10.html
@@ -10,7 +10,7 @@ counter: 10 / 16
 <p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 
-<p>Photography by <a href="www.greggbrownweddings.com">Gregg Brown</a></p>
+<p>Photography by <a href="http://www.greggbrownweddings.com" target="_blank">Gregg Brown</a></p>
 
 <hr />
 
