--- a/portfolio/candler6.html
+++ b/portfolio/candler6.html
@@ -10,4 +10,4 @@ counter: 6 / 16
 <p>A beautiful 1950's style wedding dress with delicate cream lace over Autumnal golden-orange silk.</p>
 
 
-<p>Photography by <a href="www.greggbrownweddings.com">Gregg Brown</a></p>
+<p>Photography by <a href="http://www.greggbrownweddings.com" target="_blank">Gregg Brown</a></p>
