Remove quotes from titles.

--- a/portfolio/lilac1.html
+++ b/portfolio/lilac1.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac1.jpg
 nextpic: lilac2
 
