--- a/portfolio/lilac10.html
+++ b/portfolio/lilac10.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac10.jpg
 nextpic: lilac11
 prevpic: lilac9
