--- a/portfolio/lilac11.html
+++ b/portfolio/lilac11.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac11.jpg
 nextpic: lilac12
 prevpic: lilac10
