--- a/portfolio/lilac12.html
+++ b/portfolio/lilac12.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac12.jpg
 nextpic: lilac13
 prevpic: lilac11
