--- a/portfolio/lilac2.html
+++ b/portfolio/lilac2.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac2.jpg
 nextpic: lilac3
 prevpic: lilac1
