--- a/portfolio/lilac6.html
+++ b/portfolio/lilac6.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac6.jpg
 nextpic: lilac7
 prevpic: lilac5
