--- a/portfolio/lilac7.html
+++ b/portfolio/lilac7.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac7.jpg
 nextpic: lilac8
 prevpic: lilac6
