--- a/portfolio/lilac8.html
+++ b/portfolio/lilac8.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac8.jpg
 nextpic: lilac9
 prevpic: lilac7
