--- a/portfolio/snow1.html
+++ b/portfolio/snow1.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow1.jpg
 nextpic: snow2
 
