--- a/portfolio/snow3.html
+++ b/portfolio/snow3.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow3.jpg
 nextpic: snow4
 prevpic: snow2
