--- a/portfolio/snow6.html
+++ b/portfolio/snow6.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow6.jpg
 nextpic: snow7
 prevpic: snow5
