--- a/portfolio/snow9.html
+++ b/portfolio/snow9.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow9.jpg
 nextpic: snow10
 prevpic: snow8
