--- a/portfolio/lilac13.html
+++ b/portfolio/lilac13.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac13.jpg
 nextpic: lilac14
 prevpic: lilac12
