--- a/portfolio/lilac14.html
+++ b/portfolio/lilac14.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac14.jpg
 
 prevpic: lilac13
