--- a/portfolio/lilac3.html
+++ b/portfolio/lilac3.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac3.jpg
 nextpic: lilac4
 prevpic: lilac2
