--- a/portfolio/lilac4.html
+++ b/portfolio/lilac4.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac4.jpg
 nextpic: lilac5
 prevpic: lilac3
