--- a/portfolio/lilac5.html
+++ b/portfolio/lilac5.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac5.jpg
 nextpic: lilac6
 prevpic: lilac4
