--- a/portfolio/lilac9.html
+++ b/portfolio/lilac9.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Lucie" Wedding Dress for Photoshoot
+title: Lucie Wedding Dress for Photoshoot
 image: lilac9.jpg
 nextpic: lilac10
 prevpic: lilac8
