--- a/portfolio/snow10.html
+++ b/portfolio/snow10.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow10.jpg
 nextpic: snow11
 prevpic: snow9
