--- a/portfolio/snow2.html
+++ b/portfolio/snow2.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow2.jpg
 nextpic: snow3
 prevpic: snow1
