--- a/portfolio/snow4.html
+++ b/portfolio/snow4.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow4.jpg
 nextpic: snow5
 prevpic: snow3
