--- a/portfolio/snow5.html
+++ b/portfolio/snow5.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow5.jpg
 nextpic: snow6
 prevpic: snow4
