--- a/portfolio/snow7.html
+++ b/portfolio/snow7.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow7.jpg
 nextpic: snow8
 prevpic: snow6
