--- a/portfolio/snow8.html
+++ b/portfolio/snow8.html
@@ -1,6 +1,6 @@
 ---
 layout: client
-title: "Ella" Wedding Dress for Photoshoot
+title: Ella Wedding Dress for Photoshoot
 image: snow8.jpg
 nextpic: snow9
 prevpic: snow7
