--- a/portfolio/alexandra7.html
+++ b/portfolio/alexandra7.html
@@ -10,4 +10,4 @@ counter: 7 / 14
 Palest blush satin with ivory organza and tulle layered on top. This commission was lots of fun as the bride is a designer herself and really only wanted me for the labour, all the design was her own! Alexandra also did all the lace and beading work herself, on a spectacular dress that I created for her as a canvas. <br/> <br/> 
  Similar styles from £1850 plus fabric, with similar lace work £3000+
 <hr/>
-Alexandra did the lace appliqué and beading herself. I am always happy to accommodate a clients' desire to create parts of their dress.
+Alexandra did the lace appliqué and beading herself. I am always happy to accommodate a client's desire to create parts of their dress.
