--- a/portfolio/brabbsbmaid5.html
+++ b/portfolio/brabbsbmaid5.html
@@ -9,4 +9,4 @@ counter: 5 / 10
 
 Stunning 1950's style bridesmaids dresses in 'Cadbury' purple with with black sashes and pretty butterfly detail.
 <hr/>
-With the bride, who also had her dress made by me. Click <a href="brabbs1.html">here</a> to see more of Karen's stunning wedding dress.
+With the bride, who also had her dress made by me. Click <a href="portfolio/brabbs1.html">here</a> to see more of Karen's stunning wedding dress.
