Adding some thank yous and cleaned kelly.

--- a/portfolio/alexandra2.html
+++ b/portfolio/alexandra2.html
@@ -9,3 +9,5 @@ counter: 2 / 14
 
 Palest blush satin with ivory organza and tulle layered on top. This commission was lots of fun as the bride is a designer herself and really only wanted me for the labour, all the design was her own! Alexandra also did all the lace and beading work herself, on a spectacular dress that I created for her as a canvas. <br/> <br/> 
  Similar styles from £1850 plus fabric, with similar lace work £3000+
+<hr/>
+<b>Alexandra wrote:</b> My dress was everything and more that I dreamed of. Everyone loved it, and of course I am it's biggest fan! I hope you are able to continue to help future brides like myself feel as beautiful as I did!
