--- a/portfolio/parkinson3.html
+++ b/portfolio/parkinson3.html
@@ -8,3 +8,5 @@ counter: 3 / 13
 ---
 
 Classic lace and tulle dress with boned satin bodice and romantic layered skirt. Similar styles from £1850, with materials as shown £2200.
+<hr/>
+<b>Sofia wrote:</b> Hi Felicity, <br/> Thank you so much for your email and getting in touch! Apologies for the delayed response but I have only just switched on my work emails after two weeks honeymooning in Thailand. The wedding was such a beautiful day, even the weather was perfect! I have to say that I absolutely loved my dress and got lovely comments about it all day and am still getting comments from people in the office about how beautiful it looked so thank you so very much for creating a perfect dress for a perfect day :-) I have attached 2 photos for you and would be happy for you to use them on your website. More photos may follow later but these are the initial ones the photographer has sent over so far. Thank you so much again! <br/> Sofia
