--- a/portfolio/ayesha13.html
+++ b/portfolio/ayesha13.html
@@ -9,4 +9,4 @@ counter: 13 / 17
 
 Stunning dress in winter white duchess satin and bold guipure lace.
 <hr/>
-Fitting Picture: Ayesha at an early fitting in the skirt and bodice before the lace was added. Bust cups ensured her modesty and had to be covered specially to make sure the showed as little as possible. The Tulle used as the shear base of the bodice was dyed to match er skin and be as invisible as possible.
+Fitting Picture: Ayesha at an early fitting in the skirt and bodice before the lace was added. Bust cups ensured her modesty and had to be covered specially to make sure they showed as little as possible. The Tulle used as the shear base of the bodice was dyed to match er skin and be as invisible as possible.
