--- a/portfolio/kelly6.html
+++ b/portfolio/kelly6.html
@@ -7,26 +7,11 @@ prevpic: kelly5
 counter: 6 / 10
 ---
 
-<b>
-Wedding dress restyle (vintage) and bolero for Sarah Kelly
-</b>
+Wedding dress restyle (vintage) and bolero for Sarah Kelly <p><b>Similar restyling work from £500</b> <i>(as shown £650)</i><br/><b>Boleros from £130 </b> <i> (with lace as shown £290) </i> </p> <p>Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.</p>
+<br/><br/>
+Official photographs by <a href="http://www.mariannechua.com" target="_blank">Marianne Chua</a><br/>
+<hr/>
 
-<p>
- <b>
- Similar restyling work from £500 </b> <i>(as shown £650)</i>
-	<br/>
-	<b>
-	Boleros from £130 </b> <i> (with lace as shown £290)
- </i>
- 
-</p>
-
-<p>
-Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.
-</p>
-
-
-<p> <i> Official photographs by <a href="http://www.mariannechua.com/" target="_blank"> Marianne Chua </a> </i></p>
 <hr /> 
 
 <p> 
