--- a/portfolio/kelly4.html
+++ b/portfolio/kelly4.html
@@ -7,6 +7,6 @@ prevpic: kelly3
 counter: 4 / 10
 ---
 
-Wedding dress restyle (vintage) and bolero for Sarah Kelly <p><b>Similar restyling work from £500</b> <i>(as shown £650)</i><br/><b>Boleros from £130 </b> <i> (with lace as shown £290) </i> </p> <p>Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.</p>
+Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/> <b>Similar restyling work from £500</b> <i>(as shown £650)</i> <br/> <b>Boleros from £130 </b> <i> (with lace as shown £290) </i> <br/> Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.
 <hr/>
 <p> A picture of the vintage dress 'before' at it's last outing in the 1970's on Sarah's mum's wedding day. </p>
