--- a/portfolio/kelly9.html
+++ b/portfolio/kelly9.html
@@ -7,6 +7,6 @@ prevpic: kelly8
 counter: 9 / 10
 ---
 
-Wedding dress restyle (vintage) and bolero for Sarah Kelly <p><b>Similar restyling work from £500</b> <i>(as shown £650)</i><br/><b>Boleros from £130 </b> <i> (with lace as shown £290) </i> </p> <p>Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.</p>
+Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/> <b>Similar restyling work from £500</b> <i>(as shown £650)</i> <br/> <b>Boleros from £130 </b> <i> (with lace as shown £290) </i> <br/> Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.
 <br/><br/>
 Official photographs by <a href="http://www.mariannechua.com" target="_blank">Marianne Chua</a><br/>
