Whitespace adjust in kelly.

--- a/portfolio/kelly3.html
+++ b/portfolio/kelly3.html
@@ -7,6 +7,8 @@ prevpic: kelly2
 counter: 3 / 10
 ---
 
-Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/> <b>Similar restyling work from £500</b> <i>(as shown £650)</i> <br/> <b>Boleros from £130 </b> <i> (with lace as shown £290) </i> <br/> Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.
+Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/><br/>
+ <b>Similar restyling work from £500</b> <i>(as shown £650)</i> <br/> <b>Boleros from £130 </b> <i> (with lace as shown £290) </i> <br/><br/>
+ Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.
 <br/><br/>
 Official photographs by <a href="http://www.mariannechua.com" target="_blank">Marianne Chua</a><br/>
