--- a/portfolio/kelly6.html
+++ b/portfolio/kelly6.html
@@ -13,9 +13,4 @@ Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/><br/>
 <br/><br/>
 Official photographs by <a href="http://www.mariannechua.com" target="_blank">Marianne Chua</a><br/>
 <hr/>
-
-<hr /> 
-
-<p> 
-A hidden inner corset lace shut to cinch Sarah's waist and give a support the strapless shape.
-</p>
+A hidden inner corset laced shut to cinch Sarah's waist and give support to the strapless shape.
