Added thank you and cleaned casey.

--- a/portfolio/casey1.html
+++ b/portfolio/casey1.html
@@ -14,11 +14,7 @@ counter: 1 / 13
  <br/><br/>
  Similar styles from £2100, with fabrics as shown £2600
 </p>
-
-
 <hr/>
-
-<p>
- I also made the groom's scrunchy-tie in fabric to match the brides dress.
+<p> I also made the groom's scrunchy-tie in fabric to match the brides dress.
  Ties and cravats from £35.
 </p>
