--- a/portfolio/casey3.html
+++ b/portfolio/casey3.html
@@ -14,3 +14,5 @@ counter: 3 / 13
  <br/><br/>
  Similar styles from £2100, with fabrics as shown £2600
 </p>
+<hr/>
+<b>Katherine wrote:</b> Hi Felicity, <br/> Thank you so much again for all of your fantastic work everyone just loved the dresses and kept commenting on how unusual mine was!!! <br/> Take care <br/> Katherine. Xxx
