Adding thank you to butler.

--- a/portfolio/butler10.html
+++ b/portfolio/butler10.html
@@ -26,8 +26,5 @@ Wedding dress and veil for Gerry Butler
 </p>
 
 
-<hr /> 
-
-<p>
-The ruched bodice was created by draping the silk on a stand and then carefully hand stitching all the folds in place
-</p>
+<hr/>
+The ruched bodice was created by draping the silk on a stand and then carefully hand stitching all the folds in place.
