--- a/portfolio/butler15.html
+++ b/portfolio/butler15.html
@@ -26,13 +26,7 @@ Wedding dress and veil for Gerry Butler
 </p>
 
 
-<hr /> 
-
-<p>
-Gerry's lovely mother in law, Georgina Butler wanted her shop bought dress to have something extra and we came up with adding this beaded black lace to the lapel and sleeves to create a very elegant finish.
-</p>
-<p>
-Similar work from £25/h
-<br/>
-As shown here £125 including beaded black lace.
-</p>
+<hr/>
+Gerry's lovely mother in law, Georgina Butler wanted her shop bought dress to have something extra and we came up with adding this beaded black lace to the lapel and sleeves to create a very elegant finish. <br/><br/>
+ Similar work from £25/h <br/>
+ As shown here £125 including beaded black lace.
