--- a/portfolio/butler16.html
+++ b/portfolio/butler16.html
@@ -26,13 +26,9 @@ Wedding dress and veil for Gerry Butler
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"> Barney at Timeless Pictures </a> </i></p><hr /> 
-
-<p>
-Gerry's lovely mother in law, Georgina Butler wanted her shop bought dress to have something extra and we came up with adding this beaded black lace to the lapel and sleeves to create a very elegant finish.
-</p>
-<p>
-Similar work from £25/h
-<br/>
-As shown here £125 including beaded black lace.
-</p>
+<br/><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
+<hr/>
+Gerry's lovely mother in law, Georgina Butler wanted her shop bought dress to have something extra and we came up with adding this beaded black lace to the lapel and sleeves to create a very elegant finish. <br/><br/>
+ Similar work from £25/h <br/>
+ As shown here £125 including beaded black lace.
