--- a/portfolio/butler7.html
+++ b/portfolio/butler7.html
@@ -26,4 +26,5 @@ Wedding dress and veil for Gerry Butler
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"> Barney at Timeless Pictures </a> </i></p>
+<br/><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
