--- a/portfolio/butler1.html
+++ b/portfolio/butler1.html
@@ -26,8 +26,7 @@ Wedding dress and veil for Gerry Butler
 </p>
 
 
-<p> <i> Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"> Barney at Timeless Pictures </a> </i></p><hr /> 
-
-<p>
+<br/><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
+<hr/>
 Gerry's dress was made with a fitted and boned bodice with ruched silk sweeping in a cross over design to one side. The sweetheart neckline flowed into the off the shoulder line around the top of her elbow length sleeves. The dress was gently fitted around the hips before flaring out and falling into a train. 'Godet' panels created the fullness of the skirt whist complementing the hang of the silk fabric. The dress was finished with covered buttons at the back and beaded motifs at the hip and the bottom of the back opening.
-</p>
