--- a/portfolio/butler4.html
+++ b/portfolio/butler4.html
@@ -27,7 +27,7 @@ Wedding dress and veil for Gerry Butler
 
 
 <br/><br/>
-Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank">Barney at Timeless Pictures</a><br/>
 <hr/>
 <b>Gerry wrote:</b> Hello! <br/> 
  Just so you know - the dress was a huge success. Very beautiful. Just loved it! Thanks so much for making it such a lovely experience. I really appreciate your kindness, advice and all the hard work you have put into the dress. Your quality of work is amazing, Fliss, and incredible value for money. Thank you for all that extra work. I will certainly be recommending you to anyone I hear is getting married!! So will my friends!!! Thank you for making them feel so welcome too. <br/> 
