--- a/portfolio/butler7.html
+++ b/portfolio/butler7.html
@@ -27,4 +27,4 @@ Wedding dress and veil for Gerry Butler
 
 
 <br/><br/>
-Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank">Barney at Timeless Pictures</a><br/>
