--- a/portfolio/butler17.html
+++ b/portfolio/butler17.html
@@ -27,7 +27,7 @@ Wedding dress and veil for Gerry Butler
 
 
 <br/><br/>
-Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank">Barney at Timeless Pictures</a><br/>
 <hr/>
 Gerry's lovely mother in law, Georgina Butler wanted her shop bought dress to have something extra and we came up with adding this beaded black lace to the lapel and sleeves to create a very elegant finish. <br/><br/>
  Similar work from £25/h <br/>
