--- a/portfolio/butler2.html
+++ b/portfolio/butler2.html
@@ -27,7 +27,7 @@ Wedding dress and veil for Gerry Butler
 
 
 <br/><br/>
-Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank"></a><br/>
+Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank">Barney at Timeless Pictures</a><br/>
 <hr/>
 Two tier veil with beaded motifs <br/>
  Similar styles from £120 <br/><br/> I also made a veil for Gerry in plain ivory tulle. It was cut to fall longer than her dress' train and with a blusher for over her face before the ceremony. We finished the veil with the same beaded motifs as on the dress, placed to show up where the veil spread across the floor.
