--- a/portfolio/butler10.html
+++ b/portfolio/butler10.html
@@ -7,24 +7,8 @@ prevpic: butler9
 counter: 10 / 17
 ---
 
-<b>
-Wedding dress and veil for Gerry Butler
-</b>
-
-<p>
- <b>
- Similar styles from £1600
- </b>
- <br />
- <i>
- With materials and detailing as shown £2100
- </i>
-</p>
-
-<p>
- Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves. 
-</p>
-
-
+<b>Wedding dress and veil for Gerry Butler</b> <br/><br/>
+ <b> Similar styles from £1600 </b> <br/> <i> With materials and detailing as shown £2100 </i> <br/><br/>
+ Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves.
 <hr/>
 The ruched bodice was created by draping the silk on a stand and then carefully hand stitching all the folds in place.
