--- a/portfolio/butler15.html
+++ b/portfolio/butler15.html
@@ -7,25 +7,9 @@ prevpic: butler14
 counter: 15 / 17
 ---
 
-<b>
-Wedding dress and veil for Gerry Butler
-</b>
-
-<p>
- <b>
- Similar styles from £1600
- </b>
- <br />
- <i>
- With materials and detailing as shown £2100
- </i>
-</p>
-
-<p>
- Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves. 
-</p>
-
-
+<b>Wedding dress and veil for Gerry Butler</b> <br/><br/>
+ <b> Similar styles from £1600 </b> <br/> <i> With materials and detailing as shown £2100 </i> <br/><br/>
+ Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves.
 <hr/>
 Gerry's lovely mother in law, Georgina Butler wanted her shop bought dress to have something extra and we came up with adding this beaded black lace to the lapel and sleeves to create a very elegant finish. <br/><br/>
  Similar work from £25/h <br/>
