--- a/portfolio/butler5.html
+++ b/portfolio/butler5.html
@@ -7,25 +7,9 @@ prevpic: butler4
 counter: 5 / 17
 ---
 
-<b>
-Wedding dress and veil for Gerry Butler
-</b>
-
-<p>
- <b>
- Similar styles from £1600
- </b>
- <br />
- <i>
- With materials and detailing as shown £2100
- </i>
-</p>
-
-<p>
- Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves. 
-</p>
-
-
+<b>Wedding dress and veil for Gerry Butler</b> <br/><br/>
+ <b> Similar styles from £1600 </b> <br/> <i> With materials and detailing as shown £2100 </i> <br/><br/>
+ Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves.
 <br/><br/>
 Official photographs by <a href="http://www.timelesspictures.co.uk/TIMELESS_PICTURES_-_STYLISH_AND_BEAUTIFUL_PHOTOGRAPHY.html" target="_blank">Barney at Timeless Pictures</a><br/>
 <hr/>
