--- a/portfolio/butler12.html
+++ b/portfolio/butler12.html
@@ -7,24 +7,8 @@ prevpic: butler11
 counter: 12 / 17
 ---
 
-<b>
-Wedding dress and veil for Gerry Butler
-</b>
-
-<p>
- <b>
- Similar styles from £1600
- </b>
- <br />
- <i>
- With materials and detailing as shown £2100
- </i>
-</p>
-
-<p>
- Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves. 
-</p>
-
-
+<b>Wedding dress and veil for Gerry Butler</b> <br/><br/>
+ <b> Similar styles from £1600 </b> <br/> <i> With materials and detailing as shown £2100 </i> <br/><br/>
+ Gerry commissioned an elegant dress in ivory dupion with ruched bodice and off the shoulder sleeves.
 <hr/>
 A wrist loop was sewn inside the train so Gerry could carry her dress safely across the grass when outside. A hidden 'something blue' was revealed when she lifted her dress up.
