--- a/portfolio/waterhouse3.html
+++ b/portfolio/waterhouse3.html
@@ -7,20 +7,9 @@ prevpic: waterhouse2
 counter: 3 / 7
 ---
 
-<p>
- Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back.
- <br/>
- <br/>
+Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
  Similar styles from £1850, as shown £2400
-</p>
-
-<p>
- Photography by <a href="https://www.flickr.com/photos/sebastiangonearchi/">Sebastian Lomas</a>
-</p>
-
-
+<br/><br/>
+Official photographs by <a href="https://www.flickr.com/photos/sebastiangonearchi/" target="_blank">Sebastian Lomas</a><br/>
 <hr/>
-
-<p>
- I always provide a wrist loop to make carrying the train outside easy, and pretty!
-</p>
+I always provide a wrist loop to make carrying the train outside easy, and pretty!
