--- a/portfolio/waterhouse5.html
+++ b/portfolio/waterhouse5.html
@@ -7,13 +7,7 @@ prevpic: waterhouse4
 counter: 5 / 7
 ---
 
-<p>
- Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back.
- <br/>
- <br/>
+Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
  Similar styles from £1850, as shown £2400
-</p>
-
-<p>
- Photography by <a href="https://www.flickr.com/photos/sebastiangonearchi/">Sebastian Lomas</a>
-</p>
+<br/><br/>
+Official photographs by <a href="https://www.flickr.com/photos/sebastiangonearchi/" target="_blank">Sebastian Lomas</a><br/>
