--- a/portfolio/waterhouse2.html
+++ b/portfolio/waterhouse2.html
@@ -7,21 +7,9 @@ prevpic: waterhouse1
 counter: 2 / 7
 ---
 
-<p>
- Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back.
- <br/>
- <br/>
+Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
  Similar styles from £1850, as shown £2400
-</p>
-
-<p>
- Photography by <a href="https://www.flickr.com/photos/sebastiangonearchi/">Sebastian Lomas</a>
-</p>
-
-
+<br/><br/>
+Official photographs by <a href="https://www.flickr.com/photos/sebastiangonearchi/" target="_blank">Sebastian Lomas</a><br/>
 <hr/>
-
-<p>
- The neckline and sleeves were both trimmed with scalloped edging.
- The thistle brooch Sarah-Louise wore had family significance, such a lovely special touch!
-</p>
+The neckline and sleeves were both trimmed with scalloped edging. The thistle brooch Sarah-Louise wore had family significance, such a lovely special touch!
