--- a/portfolio/waterhouse4.html
+++ b/portfolio/waterhouse4.html
@@ -7,20 +7,7 @@ prevpic: waterhouse3
 counter: 4 / 7
 ---
 
-<p>
- Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back.
- <br/>
- <br/>
+Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
  Similar styles from £1850, as shown £2400
-</p>
-
-<p>
- Photography by <a href="https://www.flickr.com/photos/sebastiangonearchi/">Sebastian Lomas</a>
-</p>
-
-
 <hr/>
-
-<p>
- Original Design Sketch
-</p>
+Original Design Sketch
