--- a/portfolio/waterhouse6.html
+++ b/portfolio/waterhouse6.html
@@ -7,19 +7,9 @@ prevpic: waterhouse5
 counter: 6 / 7
 ---
 
-<p>
- Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back.
- <br/>
- <br/>
+Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
  Similar styles from £1850, as shown £2400
-</p>
-
-<p>
- Photography by <a href="https://www.flickr.com/photos/sebastiangonearchi/">Sebastian Lomas</a>
-</p>
-
-
+<br/><br/>
+Official photographs by <a href="https://www.flickr.com/photos/sebastiangonearchi/" target="_blank">Sebastian Lomas</a><br/>
 <hr/>
-<p>
- I was lucky enough to be invited to this wedding, here I am with my then 10 month old baby girl, Rosalind.
-</p>
+I was lucky enough to be invited to this wedding, here I am with my then 10 month old baby girl, Rosalind.
