Add waterhouse thank you.

--- a/portfolio/waterhouse4.html
+++ b/portfolio/waterhouse4.html
@@ -2,9 +2,9 @@
 layout: client
 title: Silk and Lace Wedding dress for Sarah-Louise
 image: waterhouse4.jpg
-nextpic: waterhouse5
+nextpic: waterhousethanks
 prevpic: waterhouse3
-counter: 4 / 7
+counter: 4 / 8
 ---
 
 Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
