--- a/portfolio/waterhouse5.html
+++ b/portfolio/waterhouse5.html
@@ -3,8 +3,8 @@ layout: client
 title: Silk and Lace Wedding dress for Sarah-Louise
 image: waterhouse5.jpg
 nextpic: waterhouse6
-prevpic: waterhouse4
-counter: 5 / 7
+prevpic: waterhousethanks
+counter: 6 / 8
 ---
 
 Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
