Adding new thank yous.

--- a/portfolio/carroll5.html
+++ b/portfolio/carroll5.html
@@ -3,8 +3,8 @@ layout: client
 title: Wedding dress for Madeleine Carroll
 image: carroll5.jpg
 nextpic: carroll6
-prevpic: carroll4
-counter: 5 / 12
+prevpic: carrollthanks
+counter: 6 / 13
 ---
 
 <b>
