--- a/portfolio/carrollthanks.html
+++ b/portfolio/carrollthanks.html
@@ -1,10 +1,10 @@
 ---
 layout: client
 title: Wedding dress for Madeleine Carroll
-image: carroll8.jpg
-nextpic: carroll9
-prevpic: carroll7
-counter: 9 / 13
+image: carrollthanks.jpg
+nextpic: carroll5
+prevpic: carroll4
+counter: 5 / 13
 ---
 
 <b>
@@ -24,11 +24,4 @@ Wedding dress for Madeleine Carroll
 <p>
 Madeleine commissioned a slim fitting wedding dress in ivory lace over duchess satin. 
 </p>
-
-
-<hr /> 
-<p>
-Design sketch
-<br/>
-The neckline was changed before the dress was actually made up when Madeleine had some new ideas (see next pic).
-</p>
+<b> Madeleine wrote: </b> Dear Felicity, <br/> Thank you so so much for the amazing dress! You had the image I had in my head and made it real and I just can't thank you enough for that! Lots of love, <br/> Madeleine xxx
