--- a/portfolio/cristina6.html
+++ b/portfolio/cristina6.html
@@ -3,8 +3,8 @@ layout: client
 title: Wedding dress for Cristina
 image: cristina6.jpg
 nextpic: cristina7
-prevpic: cristina5
-counter: 6 / 12
+prevpic: cristinathanks
+counter: 7 / 13
 ---
 
 <b>
