--- a/portfolio/harris8.html
+++ b/portfolio/harris8.html
@@ -3,8 +3,8 @@ layout: client
 title: Wedding Dress for Isabella
 image: harris8.jpg
 nextpic: harris9
-prevpic: harris7
-counter: 8 / 15
+prevpic: harristhanks
+counter: 9 / 16
 ---
 
 
