--- a/portfolio/hook10.html
+++ b/portfolio/hook10.html
@@ -3,8 +3,8 @@ layout: client
 title: Wedding Dress For Ellie Hook
 image: hook10.jpg
 nextpic: hook11
-prevpic: hook9
-counter: 10 / 15
+prevpic: hookthanks
+counter: 11 / 16
 ---
 
 <b>
