--- a/portfolio/kelly4.html
+++ b/portfolio/kelly4.html
@@ -2,9 +2,9 @@
 layout: client
 title: Wedding dress for Sarah Kelly
 image: kelly4.jpg
-nextpic: kelly5
+nextpic: kellythanks
 prevpic: kelly3
-counter: 4 / 10
+counter: 4 / 11
 ---
 
 Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/><br/>
