--- a/portfolio/kelly5.html
+++ b/portfolio/kelly5.html
@@ -3,8 +3,8 @@ layout: client
 title: Wedding dress for Sarah Kelly
 image: kelly5.jpg
 nextpic: kelly6
-prevpic: kelly4
-counter: 5 / 10
+prevpic: kellythanks
+counter: 6 / 11
 ---
 
 Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/><br/>
