--- a/portfolio/waterhousethanks.html
+++ b/portfolio/waterhousethanks.html
@@ -10,5 +10,5 @@ counter: 5 / 8
 Ruched silk georgette dress with gentle fishtail flare. Lace over-bodice with scalloped edging and button back. <br/><br/>
  Similar styles from £1850, as shown £2400
 <hr/>
-Thank you so much for designing and making me such a beautiful dress that will be shared with generations to come. I am so pleased with the final outcome. I felt like such a beautiful bride and I have been lost without such an eye catching dress. Thank you so much for all your time and effort spent. Words cannot express how much it means to me. <br/>
+<b> Sarah-Louise wrote: </b> Thank you so much for designing and making me such a beautiful dress that will be shared with generations to come. I am so pleased with the final outcome. I felt like such a beautiful bride and I have been lost without such an eye catching dress. Thank you so much for all your time and effort spent. Words cannot express how much it means to me. <br/>
  Lots of love from Sarah-Louise.
