--- a/portfolio/carroll4.html
+++ b/portfolio/carroll4.html
@@ -2,9 +2,9 @@
 layout: client
 title: Wedding dress for Madeleine Carroll
 image: carroll4.jpg
-nextpic: carroll5
+nextpic: carrollthanks
 prevpic: carroll3
-counter: 4 / 12
+counter: 4 / 13
 ---
 
 <b>
