--- a/portfolio/cristina5.html
+++ b/portfolio/cristina5.html
@@ -2,9 +2,9 @@
 layout: client
 title: Wedding dress for Cristina
 image: cristina5.jpg
-nextpic: cristina6
+nextpic: cristinathanks
 prevpic: cristina4
-counter: 5 / 12
+counter: 5 / 13
 ---
 
 <b>
