--- a/portfolio/harris7.html
+++ b/portfolio/harris7.html
@@ -2,9 +2,9 @@
 layout: client
 title: Wedding Dress for Isabella
 image: harris7.jpg
-nextpic: harris8
+nextpic: harristhanks
 prevpic: harris6
-counter: 7 / 15
+counter: 7 / 16
 ---
 
 
