--- a/portfolio/hook9.html
+++ b/portfolio/hook9.html
@@ -2,9 +2,9 @@
 layout: client
 title: Wedding Dress For Ellie Hook
 image: hook9.jpg
-nextpic: hook10
+nextpic: hookthanks
 prevpic: hook8
-counter: 9 / 15
+counter: 9 / 16
 ---
 
 <b>
