--- a/portfolio/kellythanks.html
+++ b/portfolio/kellythanks.html
@@ -1,14 +1,14 @@
 ---
 layout: client
 title: Wedding dress for Sarah Kelly
-image: kelly9.jpg
-nextpic: kelly10
-prevpic: kelly8
-counter: 10 / 11
+image: kellythanks.jpg
+nextpic: kelly5
+prevpic: kelly4
+counter: 5 / 11
 ---
 
 Wedding dress restyle (vintage) and bolero for Sarah Kelly <br/><br/>
  <b>Similar restyling work from £500</b> <i>(as shown £650)</i> <br/> <b>Boleros from £130 </b> <i> (with lace as shown £290) </i> <br/><br/>
  Sarah brought me her mother's wedding dress, vintage 1970's in lace with long sleeves to be restyled for a modern bride. I also made her a pretty lace bolero to compliment the fabric of the original gown.
-<br/><br/>
-Official photographs by <a href="http://www.mariannechua.com" target="_blank">Marianne Chua</a><br/>
+<hr/>
+<b>Sarah wrote:</b> Felicity, <br/> As we celebrate our first anniversary it makes the perfect opportunity for us to thank you for making our wedding day so special. I absolutely love my wedding dress and all the memories I have from having it fitted to wearing it. It's absolutely beautiful and filled with great sentiment. Thank you so much <br/> Sarah and Matthew Eamer
