--- a/portfolio/hookthanks.html
+++ b/portfolio/hookthanks.html
@@ -21,4 +21,4 @@ Wedding Dress For Ellie Hook
  Gorgeous Ellie was married in Vegas on Halloween and her dress was a wonderful mixture of fifties shape, 
  modern styling and sublte Halloween detail.
 </p>
-<b> Ellie wrote: </b> To Felicity <br/> Just a quick note to say thank you for creating my dream dress. Without you I would not have had such a perfect wedding dress. I can't thank you enough for all your time and effort. This dress will be something I cherish forever. Thank you again Love, <br/> Ellie
+<b> Ellie wrote: </b> To Felicity <br/> Just a quick note to say thank you for creating my dream dress. Without you I would not have had such a perfect wedding dress. I can't thank you enough for all your time and effort. This dress will be something I cherish forever. Thank you again <br/> Love, Ellie
